fix: paragraph align

--- a/frontend-next-migration/src/preparedPages/MainPage/ui/_components/sections/ProjectDescription/ProjectDescription.module.scss
+++ b/frontend-next-migration/src/preparedPages/MainPage/ui/_components/sections/ProjectDescription/ProjectDescription.module.scss
@@ -144,7 +144,7 @@
         width: 80%;
         p {
             font-size: 0.9rem;
-            text-align: left;
+            text-align: center;
         }
     }
     .titleQuestion {
